--- a/android-engineer.html
+++ b/android-engineer.html
@@ -66,7 +66,7 @@
 <p><span class="badge badge-light">San Diego, CA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/cardinalhire/job/3rzzyy11xk4zmogkmr45nh3f6h'>Senior Android Automation Engineer up to $250,000 | CardinalHire</a></h5> 
+<h5><a href='https://jobs.crelate.com/portal/cardinalhire/job/3rzzyy11xk4zmogkmr45nh3f6h'>Senior Android Automation Engineer up to $250,000 | CardinalHire</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -193,7 +193,7 @@ built an app with smart money management tools to help our customers live a?...<
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
-<h5><a href='https://coinjobs.org/job/android-engineer-m-w-d-at-gnosis-service-gmbh/'>Android Engineer (m/w/d) at Gnosis Service GmbH ? CoinJobs</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://coinjobs.org/job/android-engineer-m-w-d-at-gnosis-service-gmbh/'>Android Engineer (m/w/d) at Gnosis Service GmbH ? CoinJobs</a></h5> 
 <p><span class="badge badge-light">Berlin, Germany</span></p>
 <p>Posted on:: 2019-10-22</p>
 <hr/>
@@ -222,7 +222,7 @@ built an app with smart money management tools to help our customers live a?...<
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/BlaBlaCar/743999697764733-senior-android-engineer-blablalines'>BlaBlaCar Senior Android Engineer - BlaBlaLines | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BlaBlaCar/743999697764733-senior-android-engineer-blablalines'>BlaBlaCar Senior Android Engineer - BlaBlaLines | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
@@ -302,7 +302,7 @@ code to prove it; Javascript experience a plus; You know how to architect all?..
 <p><span class="badge badge-light">Toronto</span></p>
 <p>Posted on:: 2019-10-15</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/lextechglobalservices/jobs/4475163002'>Job Application for Android/Kotlin Software Engineer - Contractor at Lextech Global Services</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/lextechglobalservices/jobs/4475163002'>Job Application for Android/Kotlin Software Engineer - Contractor at Lextech Global Services</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-15</p>
 <hr/>
@@ -350,7 +350,7 @@ code to prove it; Javascript experience a plus; You know how to architect all?..
 <p><span class="badge badge-light">Minsk  Minsk Minsk</span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Square/743999697169483-senior-android-engineer-ui-systems'>Square Senior Android Engineer, UI Systems | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Square/743999697169483-senior-android-engineer-ui-systems'>Square Senior Android Engineer, UI Systems | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
