--- a/software.html
+++ b/software.html
@@ -55,7 +55,7 @@
 <p><span class="badge badge-light">Denver, Colorado</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qS09VfwG&k=Job&j=owK89fwh&__jvst=Employee+Referral&__jvsd=svdfVgwD&__jvsc=Twitter&bid=ntmiqMwO'>Palo Alto Networks Careers - Intern - Prisma Access Software Engineer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qS09VfwG&k=Job&j=owK89fwh&__jvst=Employee+Referral&__jvsd=svdfVgwD&__jvsc=Twitter&bid=ntmiqMwO'>Palo Alto Networks Careers - Intern - Prisma Access Software Engineer</a></h5> 
 <p><span class="badge badge-light">Palo Alto Palo Alto Santa Clara, California  Palo Alto</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
@@ -165,11 +165,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/drchrono/a83259b8-5c90-4995-bdb4-4a9e365f8657'>DrChrono - Director of Software Engineering</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/drchrono/a83259b8-5c90-4995-bdb4-4a9e365f8657'>DrChrono - Director of Software Engineering</a></h5> 
 <p><span class="badge badge-light">Sunnyvale California</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/drchrono/fd5eaa49-9dab-4ba3-b711-cb6db5043053'>DrChrono - Senior Software Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/drchrono/fd5eaa49-9dab-4ba3-b711-cb6db5043053'>DrChrono - Senior Software Engineer</a></h5> 
 <p><span class="badge badge-light">Hunt Valley, Maryland</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -267,11 +267,11 @@
 <p><span class="badge badge-light">Palo Alto, CA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Square/743999698513680-senior-software-engineer'>Square Senior Software Engineer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Square/743999698513680-senior-software-engineer'>Square Senior Software Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Atlanta, GA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Square/743999698508963-senior-software-engineer-continuous-integration-infrastructure'>Square Senior Software Engineer, Continuous Integration Infrastructure | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Square/743999698508963-senior-software-engineer-continuous-integration-infrastructure'>Square Senior Software Engineer, Continuous Integration Infrastructure | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -283,7 +283,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://sportsrecruitsllc.applytojob.com/apply/lyX1OR2loi/Software-Developer-Summer-Internship'>Software Developer Summer Internship - SportsRecruits - Career Page</a></h5> 
+<h5><a href='http://sportsrecruitsllc.applytojob.com/apply/lyX1OR2loi/Software-Developer-Summer-Internship'>Software Developer Summer Internship - SportsRecruits - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -307,7 +307,7 @@
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/auth0/b9928c33-e285-4a4f-aef4-d4d5198d166d'>Auth0 - Full Stack Software Engineer, Service Management - CS Engineering</a></h5> 
+<h5><a href='https://jobs.lever.co/auth0/b9928c33-e285-4a4f-aef4-d4d5198d166d'>Auth0 - Full Stack Software Engineer, Service Management - CS Engineering</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -343,7 +343,7 @@
 <p><span class="badge badge-light">Boulder, Colorado  Boulder, Colorado</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Renaissance/743999698601455-software-engineer'>Renaissance Software Engineer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Renaissance/743999698601455-software-engineer'>Renaissance Software Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -407,7 +407,7 @@
 <p><span class="badge badge-light">United States  Berkeley</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://rakuten.referrals.selectminds.com/jobs/senior-software-engineer-leisure-lpd-10051'>Senior Software Engineer (Leisure): LPD - Rakuten Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://rakuten.referrals.selectminds.com/jobs/senior-software-engineer-leisure-lpd-10051'>Senior Software Engineer (Leisure): LPD - Rakuten Careers</a></h5> 
 <p><span class="badge badge-light">Tokyo Tokyo Tokyo, Japan</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -415,7 +415,7 @@
 <p><span class="badge badge-light">San Francisco Los Angeles</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Broadridge/743999698597135-software-engineer-java-jr1008843-'>Broadridge Software Engineer (Java) (JR1008843) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Broadridge/743999698597135-software-engineer-java-jr1008843-'>Broadridge Software Engineer (Java) (JR1008843) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Kansas City, MO</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
