--- a/project-manager.html
+++ b/project-manager.html
@@ -40,8 +40,16 @@
   
     <div class="container">
 <!--Begin body here --> 
-<h5><a href='http://pcmcanada.applytojob.com/apply/2u6oDDzFe0/Junior-Project-Manager'>Junior Project Manager - PCM Canada - Career Page</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qodaVfwq&k=Job&j=oi3tbfwJ&__jvst=Employee+Referral&__jvsd=sWJIKgwS&__jvsc=Twitter&bid=nfljqMwA'>Shift Digital Careers - Program Manager - Lead Management</a></h5> 
 <p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-10-31</p>
+<hr/>
+<h5><a href='https://www.edsurge.com/jobs/program-manager-online-and-hybrid-programs-job-at-office-of-academic-innovation-university-of-michigan?utm_content=bufferad16c&utm_medium=social&utm_source=twitter.com&utm_campaign=EdSurgeBuffer'>Program Manager, Online and Hybrid Programs for Center for Academic Innovation, University of Michigan in Ann Arbor, Michigan</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-10-31</p>
+<hr/>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://pcmcanada.applytojob.com/apply/2u6oDDzFe0/Junior-Project-Manager'>Junior Project Manager - PCM Canada - Career Page</a></h5> 
+<p><span class="badge badge-light">Canada Canada  Canada</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
 <h5><a href='https://jobs.lever.co/unispace/77129ef0-dc97-46bf-a48f-c891c9b63d06'>Unispace - Project Manager - Traveler</a></h5> 
@@ -72,7 +80,7 @@
 <p><span class="badge badge-light">London, United Kingdom</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/weston/job/oFpqbfwp'>Weston Solutions Careers - Project Manager</a></h5> 
+<h5><a href='https://jobs.jobvite.com/weston/job/oFpqbfwp'>Weston Solutions Careers - Project Manager</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -80,7 +88,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://www.artsandmediajobs.com/uk/job/14722/programme-manager-major-projects-1/'>Programme Manager: Major Projects with The British Museum</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.artsandmediajobs.com/uk/job/14722/programme-manager-major-projects-1/'>Programme Manager: Major Projects with The British Museum</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
@@ -94,7 +102,7 @@ Project Manager/Owners Rep for Developer 55+ Communities in Spring, from Custom 
 <p><span class="badge badge-light">North Billerica, Massachusetts</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q919VfwY&k=Job&j=osK39fw8&__jvst=Employee&__jvsd=su86Ggw9&__jvsc=Twitter&bid=nQzeqMwk'>Quotient Technology Inc. Careers - Media Project Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q919VfwY&k=Job&j=osK39fw8&__jvst=Employee&__jvsd=su86Ggw9&__jvsc=Twitter&bid=nQzeqMwk'>Quotient Technology Inc. Careers - Media Project Manager</a></h5> 
 <p><span class="badge badge-light">New York, New York</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
@@ -218,7 +226,7 @@ Project Manager/Owners Rep for Developer 55+ Communities in Spring, from Custom 
 <p><span class="badge badge-light">Washington, DC</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/cygnal/jobs/4503137002'>Job Application for Research Project Manager at Cygnal</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/cygnal/jobs/4503137002'>Job Application for Research Project Manager at Cygnal</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -256,7 +264,7 @@ Project Manager/Owners Rep for Developer 55+ Communities in Spring, from Custom 
 <p><span class="badge badge-light">Madrid, Spain  Madrid</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/nasuni/job/omDrbfwl'> Nasuni Careers - Principal Technical Program Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/nasuni/job/omDrbfwl'> Nasuni Careers - Principal Technical Program Manager</a></h5> 
 <p><span class="badge badge-light">Boston, Massachusetts</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -350,7 +358,7 @@ Project Manager/Owners Rep for Developer 55+ Communities in Spring, from Custom 
 <p><span class="badge badge-light">Irving, TX  Irving, TX</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/CapTechConsulting/743999698577677-senior-project-manager'>CapTech Consulting Senior Project Manager | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/CapTechConsulting/743999698577677-senior-project-manager'>CapTech Consulting Senior Project Manager | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Charlotte, NC</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -370,7 +378,7 @@ Project Manager/Owners Rep for Developer 55+ Communities in Spring, from Custom 
 <p><span class="badge badge-light">Taiwan</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/ironcladts/2c7b9efe-3c4e-4d83-8555-45bbf36a9634'>Ironclad Technology Services - IT Program Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/ironcladts/2c7b9efe-3c4e-4d83-8555-45bbf36a9634'>Ironclad Technology Services - IT Program Manager</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -390,7 +398,7 @@ Project Manager/Owners Rep for Developer 55+ Communities in Spring, from Custom 
 <p><span class="badge badge-light">Hamburg Hamburg, Deutschland</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Bey/743999698571973-technical-project-manager-korean-speaking-is-mandatory'>Bey Technical Project Manager - KOREAN SPEAKING IS MANDATORY | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Bey/743999698571973-technical-project-manager-korean-speaking-is-mandatory'>Bey Technical Project Manager - KOREAN SPEAKING IS MANDATORY | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Bellevue Bellevue, WA Bellevue, WA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -398,11 +406,11 @@ Project Manager/Owners Rep for Developer 55+ Communities in Spring, from Custom 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.jobware.net/Job/Project-Manager-m-f-Division-Professional-Services.323071275.html?jw_chl_seg=YOURJOBINGERMANY&skin=zaehlpixel_only'>Project Manager (m/f) Division Professional Services | Wirecard Technologies GmbH | Job</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobware.net/Job/Project-Manager-m-f-Division-Professional-Services.323071275.html?jw_chl_seg=YOURJOBINGERMANY&skin=zaehlpixel_only'>Project Manager (m/f) Division Professional Services | Wirecard Technologies GmbH | Job</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698567797-rexroth-project-manager-bluesky'>Bosch Group Rexroth ? Project manager - BlueSky | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698567797-rexroth-project-manager-bluesky'>Bosch Group Rexroth ? Project manager - BlueSky | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Budapest</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -437,14 +445,6 @@ Project Manager/Owners Rep for Developer 55+ Communities in Spring, from Custom 
 <h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qCA9Vfw0&k=Job&j=oFTmbfwP&__jvst=Employee&__jvsd=sBvgWhw4&__jvsc=Twitter&bid=ntzrpMw9'>Miniclip Careers - Go-To-Market Project Manager</a></h5> 
 <p><span class="badge badge-light">Lisbon, Portugal</span></p>
 <p>Posted on:: 2019-10-31</p>
-<hr/>
-<h5><a href='https://jobs.jobvite.com/derivesystems/job/oswlafwd'>Derive Systems Careers - Project Manager</a></h5> 
-<p><span class="badge badge-light">Broomfield, Colorado</span></p>
-<p>Posted on: 2019-10-31</p>
-<hr/>
-<h5><a href='http://potentialpark.applytojob.com/apply/aHRLgwVLu3/Project-Manager-For-A-German-Pilot-Study'>Project Manager for a German pilot study - Potentialpark - Career Page</a></h5> 
-<p><span class="badge badge-light">Stockholm Stockholm, Sweden</span></p>
-<p>Posted on: 2019-10-31</p>
 <hr/>
 
 
